Feature: Add external registration URL support for events (#1024)
Enables events to redirect to external registration pages (e.g., partner websites, Luma, Eventbrite) instead of using the internal checkout system.

Changes:
- Added external_registration_url, external_registration_button_text, and external_registration_message fields to event settings
- Added tracking for external registration clicks in event statistics
- Modified "Get Tickets" button to redirect to external URL when configured
- Added new registration settings section in event edit page
- Updated all locale files with new translation strings
- Backend API endpoints updated to handle external registration data
- Statistics now track external registration link clicks

When external registration URL is set, the ticket inventory and internal checkout are bypassed.

--- a/frontend/src/locales/de.po
+++ b/frontend/src/locales/de.po
@@ -9606,3 +9606,97 @@ msgstr "Postleitzahl"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:523
 msgid "ZIP or Postal Code"
 msgstr "Postleitzahl"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "Registration Settings"
+msgstr "Registrierungseinstellungen"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "Configure how attendees register for your event"
+msgstr "Konfigurieren Sie, wie sich Teilnehmer für Ihre Veranstaltung registrieren"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "Use external registration"
+msgstr "Externe Registrierung verwenden"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "Enable this if you're using an external platform like Luma, Eventbrite, or your own registration system"
+msgstr "Aktivieren Sie dies, wenn Sie eine externe Plattform wie Luma, Eventbrite oder Ihr eigenes Registrierungssystem verwenden"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "External Registration URL"
+msgstr "Externe Registrierungs-URL"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "The URL where attendees will be redirected to register"
+msgstr "Die URL, zu der Teilnehmer zur Registrierung weitergeleitet werden"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "Button Text"
+msgstr "Schaltflächentext"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "The text shown on the registration button"
+msgstr "Der auf der Registrierungsschaltfläche angezeigte Text"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "Register on Luma"
+msgstr "Auf Luma registrieren"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "Note:"
+msgstr "Hinweis:"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "When external registration is enabled, the ticket selection and checkout will be hidden. Attendees will be redirected to your external registration URL."
+msgstr "Wenn die externe Registrierung aktiviert ist, werden die Ticketauswahl und der Checkout ausgeblendet. Teilnehmer werden zu Ihrer externen Registrierungs-URL weitergeleitet."
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "Save Changes"
+msgstr "Änderungen speichern"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "Registration settings updated successfully"
+msgstr "Registrierungseinstellungen erfolgreich aktualisiert"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "External registration URL is required"
+msgstr "Externe Registrierungs-URL ist erforderlich"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "Please enter a valid URL"
+msgstr "Bitte geben Sie eine gültige URL ein"
+
+#: src/components/routes/event/Settings/Sections/RegistrationSettings/index.tsx
+msgid "Button text is required"
+msgstr "Schaltflächentext ist erforderlich"
+
+#: src/components/layouts/EventHomepage/index.tsx
+msgid "Register Externally"
+msgstr "Extern registrieren"
+
+#: src/components/layouts/EventHomepage/index.tsx
+msgid "Registration"
+msgstr "Registrierung"
+
+#: src/components/layouts/EventHomepage/index.tsx
+msgid "This event uses external registration."
+msgstr "Diese Veranstaltung verwendet externe Registrierung."
+
+msgid "Event Host / Organizer"
+msgstr "Veranstalter"
+
+msgid "Registration Message"
+msgstr "Registrierungsnachricht"
+
+msgid "The name of the external platform or organizer hosting the registration"
+msgstr "Der Name der externen Plattform oder des Veranstalters, der die Registrierung hostet"
+
+msgid "The message shown on the event page explaining external registration"
+msgstr "Die Nachricht, die auf der Veranstaltungsseite angezeigt wird, um die externe Registrierung zu erklären"
+
+msgid "Hosted by:"
+msgstr "Veranstaltet von:"
+
+msgid "Luma"
+msgstr "Luma"
