--- a/frontend/src/locales/fr.po
+++ b/frontend/src/locales/fr.po
@@ -9607,3 +9607,21 @@ msgstr "Code Postal"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:523
 msgid "ZIP or Postal Code"
 msgstr "Code postal"
+
+msgid "Event Host / Organizer"
+msgstr "Organisateur de l'événement"
+
+msgid "Registration Message"
+msgstr "Message d'inscription"
+
+msgid "The name of the external platform or organizer hosting the registration"
+msgstr "Le nom de la plateforme externe ou de l'organisateur hébergeant l'inscription"
+
+msgid "The message shown on the event page explaining external registration"
+msgstr "Le message affiché sur la page de l'événement expliquant l'inscription externe"
+
+msgid "Hosted by:"
+msgstr "Organisé par :"
+
+msgid "Luma"
+msgstr "Luma"
