--- a/frontend/src/locales/nl.po
+++ b/frontend/src/locales/nl.po
@@ -9607,3 +9607,21 @@ msgstr "Postcode"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:523
 msgid "ZIP or Postal Code"
 msgstr "Postcode"
+
+msgid "Event Host / Organizer"
+msgstr "Evenementorganisator"
+
+msgid "Registration Message"
+msgstr "Registratiebericht"
+
+msgid "The name of the external platform or organizer hosting the registration"
+msgstr "De naam van het externe platform of de organisator die de registratie host"
+
+msgid "The message shown on the event page explaining external registration"
+msgstr "Het bericht dat op de evenementpagina wordt weergegeven ter uitleg van externe registratie"
+
+msgid "Hosted by:"
+msgstr "Georganiseerd door:"
+
+msgid "Luma"
+msgstr "Luma"
