--- a/frontend/src/locales/pl.po
+++ b/frontend/src/locales/pl.po
@@ -9620,3 +9620,21 @@ msgstr "Kod pocztowy"
 # Minimal Polish translations (add more via `lingui extract`/`lingui compile`)
 #~ msgid "Welcome"
 #~ msgstr "Witamy"
+
+msgid "Event Host / Organizer"
+msgstr "Organizator wydarzenia"
+
+msgid "Registration Message"
+msgstr "Komunikat rejestracyjny"
+
+msgid "The name of the external platform or organizer hosting the registration"
+msgstr "Nazwa zewnętrznej platformy lub organizatora hostującego rejestrację"
+
+msgid "The message shown on the event page explaining external registration"
+msgstr "Komunikat wyświetlany na stronie wydarzenia wyjaśniający rejestrację zewnętrzną"
+
+msgid "Hosted by:"
+msgstr "Organizowane przez:"
+
+msgid "Luma"
+msgstr "Luma"
