--- a/frontend/src/locales/pt.po
+++ b/frontend/src/locales/pt.po
@@ -9606,3 +9606,21 @@ msgstr "CEP ou Código postal"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:523
 msgid "ZIP or Postal Code"
 msgstr "CEP ou Código Postal"
+
+msgid "Event Host / Organizer"
+msgstr "Organizador do evento"
+
+msgid "Registration Message"
+msgstr "Mensagem de registo"
+
+msgid "The name of the external platform or organizer hosting the registration"
+msgstr "O nome da plataforma externa ou organizador que aloja o registo"
+
+msgid "The message shown on the event page explaining external registration"
+msgstr "A mensagem mostrada na página do evento explicando o registo externo"
+
+msgid "Hosted by:"
+msgstr "Organizado por:"
+
+msgid "Luma"
+msgstr "Luma"
