Add missing translations for external registration feature
Completes translations for all supported languages (German, Spanish, French, Italian, Dutch, Polish, Portuguese, Portuguese-Brazil) including:
- Registration Settings section
- External registration URL and button text fields
- Configuration messages and help text
- Statistics label for external registration clicks

Also restores language detection in locales.ts (was temporarily forced to English).

--- a/frontend/src/locales/de.po
+++ b/frontend/src/locales/de.po
@@ -9671,6 +9671,10 @@ msgstr "Bitte geben Sie eine gültige URL ein"
 msgid "Button text is required"
 msgstr "Schaltflächentext ist erforderlich"
 
+#: src/components/common/StatBoxes/index.tsx
+msgid "External Registration Clicks"
+msgstr "Externe Registrierungs-Klicks"
+
 #: src/components/layouts/EventHomepage/index.tsx
 msgid "Register Externally"
 msgstr "Extern registrieren"
