--- a/frontend/src/locales/es.po
+++ b/frontend/src/locales/es.po
@@ -9671,6 +9671,10 @@ msgstr "Por favor, ingrese una URL válida"
 msgid "Button text is required"
 msgstr "Se requiere texto del botón"
 
+#: src/components/common/StatBoxes/index.tsx
+msgid "External Registration Clicks"
+msgstr "Clics de registro externo"
+
 #: src/components/layouts/EventHomepage/index.tsx
 msgid "Register Externally"
 msgstr "Registrarse externamente"
