--- a/frontend/src/locales/it.po
+++ b/frontend/src/locales/it.po
@@ -9630,6 +9630,9 @@ msgstr "L'URL a cui i partecipanti verranno reindirizzati per registrarsi"
 msgid "Register on Luma"
 msgstr "Registrati su Luma"
 
+msgid "The text shown on the registration button"
+msgstr "Il testo mostrato sul pulsante di registrazione"
+
 msgid "Registration settings updated successfully"
 msgstr "Impostazioni di registrazione aggiornate con successo"
 
@@ -9656,6 +9659,15 @@ msgstr "Il nome della piattaforma esterna o dell'organizzatore che ospita la reg
 
 msgid "The message shown on the event page explaining external registration"
 msgstr "Il messaggio mostrato sulla pagina dell'evento che spiega la registrazione esterna"
+
+msgid "Note:"
+msgstr "Nota:"
+
+msgid "When external registration is enabled, the ticket selection and checkout will be hidden. Attendees will be redirected to your external registration URL."
+msgstr "Quando la registrazione esterna è abilitata, la selezione dei biglietti e il checkout saranno nascosti. I partecipanti verranno reindirizzati al tuo URL di registrazione esterno."
+
+msgid "External Registration Clicks"
+msgstr "Clic di registrazione esterna"
 
 msgid "Hosted by:"
 msgstr "Organizzato da:"
