--- a/frontend/src/locales/fr.po
+++ b/frontend/src/locales/fr.po
@@ -9620,6 +9620,63 @@ msgstr "Le nom de la plateforme externe ou de l'organisateur hébergeant l'inscr
 msgid "The message shown on the event page explaining external registration"
 msgstr "Le message affiché sur la page de l'événement expliquant l'inscription externe"
 
+msgid "Registration Settings"
+msgstr "Paramètres d'inscription"
+
+msgid "Configure how attendees register for your event"
+msgstr "Configurez comment les participants s'inscrivent à votre événement"
+
+msgid "Use external registration"
+msgstr "Utiliser l'inscription externe"
+
+msgid "Enable this if you're using an external platform like Luma, Eventbrite, or your own registration system"
+msgstr "Activez ceci si vous utilisez une plateforme externe comme Luma, Eventbrite ou votre propre système d'inscription"
+
+msgid "External Registration URL"
+msgstr "URL d'inscription externe"
+
+msgid "The URL where attendees will be redirected to register"
+msgstr "L'URL vers laquelle les participants seront redirigés pour s'inscrire"
+
+msgid "Button Text"
+msgstr "Texte du bouton"
+
+msgid "Register on Luma"
+msgstr "S'inscrire sur Luma"
+
+msgid "The text shown on the registration button"
+msgstr "Le texte affiché sur le bouton d'inscription"
+
+msgid "This event uses external registration."
+msgstr "Cet événement utilise l'inscription externe."
+
+msgid "Note:"
+msgstr "Remarque :"
+
+msgid "When external registration is enabled, the ticket selection and checkout will be hidden. Attendees will be redirected to your external registration URL."
+msgstr "Lorsque l'inscription externe est activée, la sélection de billets et le paiement seront masqués. Les participants seront redirigés vers votre URL d'inscription externe."
+
+msgid "Save Changes"
+msgstr "Enregistrer les modifications"
+
+msgid "Registration settings updated successfully"
+msgstr "Paramètres d'inscription mis à jour avec succès"
+
+msgid "External registration URL is required"
+msgstr "L'URL d'inscription externe est requise"
+
+msgid "Please enter a valid URL"
+msgstr "Veuillez entrer une URL valide"
+
+msgid "Button text is required"
+msgstr "Le texte du bouton est requis"
+
+msgid "Register Externally"
+msgstr "S'inscrire en externe"
+
+msgid "External Registration Clicks"
+msgstr "Clics d'inscription externe"
+
 msgid "Hosted by:"
 msgstr "Organisé par :"
 
