--- a/frontend/src/locales/nl.po
+++ b/frontend/src/locales/nl.po
@@ -9620,6 +9620,63 @@ msgstr "De naam van het externe platform of de organisator die de registratie ho
 msgid "The message shown on the event page explaining external registration"
 msgstr "Het bericht dat op de evenementpagina wordt weergegeven ter uitleg van externe registratie"
 
+msgid "Registration Settings"
+msgstr "Registratie-instellingen"
+
+msgid "Configure how attendees register for your event"
+msgstr "Configureer hoe deelnemers zich registreren voor uw evenement"
+
+msgid "Use external registration"
+msgstr "Externe registratie gebruiken"
+
+msgid "Enable this if you're using an external platform like Luma, Eventbrite, or your own registration system"
+msgstr "Schakel dit in als u een extern platform zoals Luma, Eventbrite of uw eigen registratiesysteem gebruikt"
+
+msgid "External Registration URL"
+msgstr "Externe registratie-URL"
+
+msgid "The URL where attendees will be redirected to register"
+msgstr "De URL waarnaar deelnemers worden doorverwezen om te registreren"
+
+msgid "Button Text"
+msgstr "Knoptekst"
+
+msgid "Register on Luma"
+msgstr "Registreren op Luma"
+
+msgid "The text shown on the registration button"
+msgstr "De tekst die op de registratieknop wordt weergegeven"
+
+msgid "This event uses external registration."
+msgstr "Dit evenement maakt gebruik van externe registratie."
+
+msgid "Note:"
+msgstr "Opmerking:"
+
+msgid "When external registration is enabled, the ticket selection and checkout will be hidden. Attendees will be redirected to your external registration URL."
+msgstr "Wanneer externe registratie is ingeschakeld, worden de ticketselectie en checkout verborgen. Deelnemers worden doorverwezen naar uw externe registratie-URL."
+
+msgid "Save Changes"
+msgstr "Wijzigingen opslaan"
+
+msgid "Registration settings updated successfully"
+msgstr "Registratie-instellingen succesvol bijgewerkt"
+
+msgid "External registration URL is required"
+msgstr "Externe registratie-URL is vereist"
+
+msgid "Please enter a valid URL"
+msgstr "Voer een geldige URL in"
+
+msgid "Button text is required"
+msgstr "Knoptekst is vereist"
+
+msgid "Register Externally"
+msgstr "Extern registreren"
+
+msgid "External Registration Clicks"
+msgstr "Externe registratiekliks"
+
 msgid "Hosted by:"
 msgstr "Georganiseerd door:"
 
